<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itUserFilter"
        android:title="filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always" />
</menu>
